--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "devDependencies": {
     "@biomejs/biome": "1.8.3",
+    "@tailwindcss/typography": "^0.5.13",
     "@types/node": "^20.14.11",
     "@types/react": "^18.3.3",
     "@types/react-copy-to-clipboard": "^5.0.7",
